# zfae

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  zfae_msdmd.ts
.agents/skills/: README.md
.agents/skills/doctrine/: msdmd-checks.md
.agents/skills/meta-module-build/: SKILL.md
.agents/skills/msdmd/: SKILL.md  collect.py  collection.ts  visualize.py
.agents/skills/msdmd/parsers/: __init__.py  universal.py  universal.ts
.agents/skills/ratios/: SKILL.md  annotate_index.py  ratios_check.py
.agents/skills/test-build/: SKILL.md
backend/: routes.py  server.py
docs/: chapter-7.md  provenance-edcmucns-zfae.md
frontend/: app.js  index.html  style.css  viz.js
scripts/: module_build_check.py  ratios_check.py
src/zfae/: __init__.py  gonal_constructor.py
tests/: test_gonal_constructor.py
zfae/: __init__.py  adapters.py  edcm.py  engine.py  guardian.py  memory.py  pcna.py  ptca.py  zeta.py
zfae/vernacular_floor/: __init__.py  assignment.py  codebook_import.py  floor_artifact.py  manifest.py  oewn_ingest.py  transformation_assembly.py
zfae/vernacular_floor/tests/: __init__.py  test_vernacular_floor.py
