[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zfae"
version = "0.1.0"
description = "Zeta Function Alpha Echo — inference engine of a0"
requires-python = ">=3.11"
dependencies = [
    "aimmh-lib>=0.1.0",
    "interdependent-lib>=0.1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["zfae"]
